# server/openapi.yaml
@@ -12,7 +12,7 @@ tags:
   - name: token
     description: Everything about tokens
   - name: user
-    description: Operations about user
+    description: Operations about users
 paths:
   /token:
     get:
@@ -86,6 +86,28 @@ paths:
           description: Invalid username supplied
         '404':
           description: User not found
+  /operate:
+    post:
+      tags:
+        - user
+      summary: Send request to the system
+      description: 'This request will first send a signal to the API Dispatcher, then a response from the system will be received.'
+      operationId: operate
+      parameters:
+        - name: input
+          in: query
+          description: 'The text input'
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            plain/text:
+              schema:
+                type: string
+                example: This is a text generated by ChatGPT
 components:
   schemas:
     Token:
